--- a/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
+++ b/src/app/spotbie/spotbie-logged-out/sign-up/sign-up.component.html
@@ -6,30 +6,36 @@
             
       <div class='signUpBox' #vc_spotbie_sign_up_box_inner>                                                
           
-          <div class='signUpBoxInstructions' id="sign_up_general_instructions" #spotbieSignUpIssues>
-              Join the New Social Network.
-          </div>
+        <div class='signUpBoxInstructions' id="sign_up_general_instructions" #spotbieSignUpIssues>
+            Let's Get to Spottin'
+        </div>
           
           <form [formGroup]="signUpFormx" (ngSubmit)="initSignUp()">                                               
 
               <table class='displayTableName'>
                   <tr>
                       <td>
+
                           <div *ngIf="submitted && f.spotbieUsername.errors else username_normal" class="signUpBoxInstructions animated shake">
-      
-                              <div *ngIf="f.spotbieUsername.errors.required || f.spotbieUsername.errors.emptyUsername">
-                                  Username required.
-                              </div>
+    
+                            <div *ngIf="f.spotbieUsername.errors.required || f.spotbieUsername.errors.emptyUsername">
+                                Username required.
+                            </div>
 
-                              <div *ngIf="f.spotbieUsername.errors.wrongLength">
-                                  Username must be 1 to 15 characters long.
-                              </div>
+                            <div *ngIf="f.spotbieUsername.errors.wrongLength">
+                                Username must be 1 to 35 characters long.
+                            </div>
 
-                              <div *ngIf="f.spotbieUsername.errors.illegalChars">
-                                  Username must only contain letters, numbers, and underscores.
-                              </div>
-                              
-                          </div>                                 
+                            <div *ngIf="f.spotbieUsername.errors.illegalChars">
+                                Username must only contain letters, numbers, and underscores.
+                            </div>
+                            
+                            <div *ngIf="f.spotbieUsername.errors.notUnique">
+                                Username is already in use.
+                            </div>
+
+                          </div>   
+
                           <ng-template #username_normal>
 
                               <label class="signUpBoxInstructions" id='username_label' for='spotbie_username'>
@@ -97,24 +103,31 @@
               <table class='displayTableName'>
                   <tr>
                       <td>
+
                           <div *ngIf="submitted && f.spotbieEmail.errors else email_normal" class="signUpBoxInstructions animated shake">
       
-                              <div *ngIf="f.spotbieEmail.errors.required">
-                                  Please enter your e-mail.
-                              </div>
+                            <div *ngIf="f.spotbieEmail.errors.required">
+                                Please enter your e-mail.
+                            </div>
 
-                              <div *ngIf="f.spotbieEmail.errors.email">
+                            <div *ngIf="f.spotbieEmail.errors.email">
                                 Invalid e-mail.
-                              </div>                              
+                            </div>                              
                               
-                          </div>                                               
+                            <div *ngIf="f.spotbieEmail.errors.notUnique">
+                                E-mail is already in use.
+                            </div>                             
+
+                          </div>      
+
                           <ng-template #email_normal>
 
-                              <label class="signUpBoxInstructions" id='email_label' for='user_email'>
-                                  What e-mail should I reach you at?
-                              </label>
+                            <label class="signUpBoxInstructions" id='email_label' for='user_email'>
+                                What e-mail should we reach you at?
+                            </label>
       
-                          </ng-template>                                   
+                          </ng-template> 
+
                           <input class='spotbie-input signUpInput' (keyup)="removeWhiteSpace('spotbieEmail')" type='text' id='user_email' formControlName="spotbieEmail" placeholder='E-mail Address' autocomplete="email"/>
                       </td>
                   </tr>
@@ -125,18 +138,28 @@
                       <td>
                           <div *ngIf="submitted && f.spotbiePhone.errors else phone_normal" class="signUpBoxInstructions animated shake">
       
-                              <div *ngIf="f.spotbiePhone.errors.required">
-                                  Please enter your phone number.
-                              </div>                                                
-      
-                          </div>                                
+                            <div *ngIf="f.spotbiePhone.errors.required">
+                                Please enter your phone number.
+                            </div>                                                
+    
+                            <div *ngIf="f.spotbiePhone.errors.invalidPhone">
+                                Invalid phone number. Format: (786) 555-5555
+                            </div> 
+
+                            <div *ngIf="f.spotbiePhone.errors.notUnique">
+                                Phone Number is already in use.
+                            </div>   
+
+                          </div>  
+
                           <ng-template #phone_normal>
 
-                              <label class="signUpBoxInstructions" id='phone_number_label' for='user_phone'>
-                                  Phone number to verify that you are human.
-                              </label>
-      
-                          </ng-template>                                   
+                            <label class="signUpBoxInstructions" id='phone_number_label' for='user_phone'>
+                                Phone number to verify that you are human.
+                            </label>
+    
+                          </ng-template>  
+
                           <input class='spotbie-input signUpInput' type='text' id='user_phone' mask="(000) 000-0000" autocomplete="tel" placeholder='(555) 555-5555' formControlName="spotbiePhone"/>
                       </td>
                   </tr>
@@ -188,13 +211,13 @@
                       <td>
                           <div *ngIf="submitted && f.spotbieConfirm.errors else confirm_password_normal" class="signUpBoxInstructions animated shake">
 
-                              <div *ngIf="f.spotbieConfirm.errors.mustMatch">
-                                  Your passwords must match.
-                              </div>
-                              
-                              <div *ngIf="f.spotbieConfirm.errors.required">
-                                  Please confirm your password.
-                              </div> 
+                            <div *ngIf="f.spotbieConfirm.errors.mustMatch">
+                                Your passwords must match.
+                            </div>
+                            
+                            <div *ngIf="f.spotbieConfirm.errors.required">
+                                Please confirm your password.
+                            </div>                              
 
                           </div>                                
                           <ng-template #confirm_password_normal>
