--- a/src/app/user-home/user-home.component.html
+++ b/src/app/user-home/user-home.component.html
@@ -6,11 +6,11 @@
 
 </div>
 
-<app-streamer></app-streamer>
+<!--<app-streamer></app-streamer>-->
 
-<div class="spotbie-scroll-top spotbie-arrow-transparent" 
+<!--<div class="spotbie-scroll-top spotbie-arrow-transparent" 
         (click)="scrollTop()"
         *ngIf="!loggedIn"
         #scrollArrow>
     <i class="fa fa-angle-double-up" aria-hidden="true"></i>
-</div>
+</div>-->
