--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,14 +4,10 @@
     bottom: 0%;
     left: 0%;
     right: 0%;
-    background: url(/assets/images/location.jpg);
-    background: url(/assets/images/jxr/location.jxr);
-    background: url(/assets/images/jp2/location.jp2);
-    background: url(/assets/images/webp/location.webp);
-    background-repeat: no-repeat;
+    background: url(/assets/images/background.png);
     background-position: center;
-    background-size: cover; 
 }
 .spotbie-main-holder{
     z-index: 99999;
+    padding-top: 64px;
 }
