--- a/src/app/spotbie/profile-header/profile-header.component.css
+++ b/src/app/spotbie/profile-header/profile-header.component.css
@@ -107,6 +107,7 @@
     width: 100%;
     min-width: 100%;
     max-width: 100%;
+    min-height: 450px;
 }
 .spotbie-background-image{
     position: absolute;
@@ -325,7 +326,7 @@ swiper{
 }
 @media (max-width: 420px) { 
     .spotbie-profile-image-options{
-        display: block;
+        display: table;
         right: 0;
         left: 0;
         margin: 0 auto;
