--- a/src/app/spotbie/read-about/read-about.component.css
+++ b/src/app/spotbie/read-about/read-about.component.css
@@ -1,19 +1,3 @@
-html{
-    position: relative;
-    margin: 0 auto;
-    position: relative;
-    width: 100%;
-    min-width: 100%;
-    max-width: 100%;
-    min-height: 100%;
-    max-height:  100%;
-    height: 100%;
-    color: white !important;
-    background-color: rgb(31, 31, 31);                 
-    overflow-y: scroll;
-    overflow-x: hidden;
-    font-family: Arial, Helvetica, sans-serif;
-}
 h2{
     font-size: 18px;
 }
@@ -28,24 +12,27 @@ h2{
     width: 100%;
     text-align: center;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 16px;
     background-color: rgb(31, 31, 31);
     color: #8BC34A;
     z-index: 1;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
 }
 .QuestionsPar{
     position: relative;
-    top: -9px;
     margin-top: 0;
     font-size: 19px;
     line-height: 24px;
     padding: 25px;
-    padding-top: 40px;
-    padding-bottom: 40px;                
-    background-color: rgba(39, 39, 39, 0.89);
-    color: white;
+    padding-top: 30px;
+    padding-bottom: 30px;               
+    background-color: rgb(255 255 255 / 89%);
+    color: black;
     letter-spacing: 2px;
     line-height: 30px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
 }
 .Pgh{
     position: absolute;
@@ -61,7 +48,6 @@ h2{
     width: 100%;
     min-width: unset !important;
     max-width: 1200px !important;
-    overflow-y: scroll;
     z-index: 9;
     color: inherit !important;
 }
@@ -82,9 +68,9 @@ h2{
     margin: 0 auto;
     margin-top: 20px;
     margin-bottom: 20px;
-    width: 100%;
-    min-width: 100%;
-    max-width: 100%;
+    width: 750px;
+    min-width: 750px;
+    max-width: 750px;
     background-color: rgba(0, 0, 0, 0.79);
     padding-top: 20px;
     padding-bottom: 20px;
@@ -92,10 +78,11 @@ h2{
     color: white !important;
     font-size: 20px;
     letter-spacing: 3px;
+    border-radius: 20px;
 }            
 .QuestionsImage{
     position: relative;
-    top: -3px;                
+    top: 3px;                
     margin: 0 auto;
     width: 100%;
     min-width: 100%;
@@ -115,7 +102,6 @@ h2{
     width: 100%;
     max-width: 660px;
     table-layout: fixed;
-    background-color: rgb(44, 44, 44);
     border-radius: 25px;
 }    
 .Axmvx {
@@ -143,7 +129,6 @@ h2{
 }
 a:hover,a:active,a,a:after{
     color: #8BC34A;
-    text-decoration: underline;
     font-weight: bold !important;
 }
 .xfDs{
@@ -155,6 +140,8 @@ a:hover,a:active,a,a:after{
     width: 100%;
     min-width: 100%;
     text-decoration: none !important;
+    font-size: 23px;
+    font-weight: normal;
 }                       
 .HomeWrapper{
     position: relative;
@@ -167,6 +154,7 @@ a:hover,a:active,a,a:after{
     max-width: 550px !important;
     cursor: pointer;
     font-size: 20px;
+    border-radius: 20px;
 }
 .termsAndService:hover{
     text-decoration: underline;
@@ -209,7 +197,7 @@ a:hover,a:active,a,a:after{
     box-shadow: inset 1px 1px 2px #757575;   
 }
 .spotbie-desc{
-    text-indent: 50px;
+    text-align: center;
 }
 .signUpBoxInstructions{
     position: relative;
@@ -229,8 +217,7 @@ a:hover,a:active,a,a:after{
     min-height: 100%;
     height: 100%;
     min-width: 100%;
-    width: 100%;
-    background-color: rgba(0,0,0,.82);            
+    width: 100%;        
     z-index: 999999999999;
     transition: all 1s;
     -webkit-overflow-scrolling: touch;
@@ -576,6 +563,19 @@ closeSlideshow:hover{
     border-radius: 20px;
     background-color: rgba(0, 0, 0, 0.74);            
 }
+.spotbie-search-click{
+    position: relative;
+    display: block;
+    margin: 0 auto;
+    color: #609329;
+    margin-top: 30px;
+    cursor: pointer;
+    text-align: center;
+    font-size: 22px;
+}
+.spotbie-search-click:hover{
+    font-size: 28px;
+}
 input{
     outline-color: #609329;
 }
@@ -599,7 +599,7 @@ body{
 }
 @font-face{
     font-family: sitka-italic;
-    src: url(../../../assets/fonts/Fluent_SitkaSmall-Italic.ttf);
+    src: url(/assets/fonts/Fluent_SitkaSmall-Italic.ttf);
     font-display: swap;
 }
 .AppsRx{
@@ -615,20 +615,20 @@ body{
     width: 50%;
     min-width: 50%;
     max-width: 50%;
-    border: 11px solid #00000021;
-    /* padding: 6px; */
+    border: 11px solid rgb(31 31 31);
     border-radius: 27px;
     background-position: center !important;
     background-repeat: no-repeat !important;
     background-size: contain !important;
-    background-color: rgba(0, 0, 0, 0.95) !important;
-    /* box-shadow: 4px 4px 4px inset; */
+    background-color: rgb(31 31 31) !important;
+    cursor: pointer;
 }
 .AppsRx td i{
     font-size: 45px;
 }
 .spotbie-banner-wrapper{
     position: relative;
+    margin-top: 20px;
 }
 .gRetScreen{
     position: fixed;
@@ -827,31 +827,14 @@ body{
         max-width: 320px !important;
     }
 }
+
 @media (max-width: 600px) {
     .signUpInput{
         font-size: 20px;
     }
 }
-@media (max-width: 560px) { 
 
-}
-@media (max-width: 460px) { 
-    .HA{
-        font-size: 19px !important;
-        letter-spacing: 1px;
-    }
-    .AppsRx{
-        max-width: 80% !important;
-        min-width: 80% !important;
-        width: 80% !important;
-    }
-    .AppsRx td{
-        padding: 20px;
-        padding-top: 0px;
-        padding-bottom: 0px;
-    }        
-}
-@media (max-width: 420px) {
+@media (max-width: 560px) {
     #timerx{
         margin-top: 10px !important;
         font-size: 25px !important;
@@ -887,9 +870,11 @@ body{
         font-size: 16px !important;
         padding-top: 20px !important;
         padding-bottom: 20px !important;
+        background-color: rgb(255 255 255 / 79%);
     }
     .signUpBox{
         border: unset !important;
+        padding-top: 0px;
     }
     .superBoxPerks{
         width: 88% !important;
@@ -945,11 +930,41 @@ body{
     .termsAndService{
         font-size: 16px !important;
     }
+    .QuestionsPar,
+    .HA{
+        border-radius: 0px;
+    }
+    .HA{
+        font-size: 19px !important;
+        letter-spacing: 1px;
+    }
+    .AppsRx{
+        max-width: 80% !important;
+        min-width: 80% !important;
+        width: 80% !important;
+    }
+    .AppsRx td{
+        padding: 20px;
+        padding-top: 0px;
+        padding-bottom: 0px;
+    }
+    .dfg{
+        font-size: 18px;
+    }       
+    .AppsRx td i {
+        font-size: 38px;
+    }
+    .spotbie-search-click{
+        margin-top: 14px;
+        font-size: 18px;
+    }    
+    .spotbie-search-click:hover{
+        font-size: 18px;
+    }
 }
 @media (max-width: 360px) { 
  
 }
-
 @media (max-width: 320px) {
     .confirmBox {
         min-width: 85% !important;
