--- a/src/app/spotbie/spotbie-logged-out/menu-logged-out.component.html
+++ b/src/app/spotbie/spotbie-logged-out/menu-logged-out.component.html
@@ -19,18 +19,16 @@
   </tr>
 </table>
 
-<div class="spotbie-menu-page-padding-top"></div>
-
 <app-profile-header [public_profile_info]="public_profile_info"
                     [current_user_bg]="spotbieBackgroundImage"
                     [album_id]="album_id"
                     [album_media_id]="album_media_id"
                     *ngIf="public_profile"></app-profile-header>
 
-<app-read-about class="spotbie-app-read-about" *ngIf="home_route"></app-read-about>
+<app-read-about class="spotbie-app-read-about" *ngIf="home_route" (spawnCategories)="spawnCategories($event)"></app-read-about>
 
 <app-log-in *ngIf="logInWindow.open"></app-log-in>
 
-<app-sign-up *ngIf="signUpWindow.open" [window_obj]="signUpWindow"></app-sign-up>
+<app-sign-up *ngIf="signUpWindow.open" [window_obj]="signUpWindow" (closeWindow)="closeWindow($event)"></app-sign-up>
 
 <app-features *ngIf="featuresWindow.open"></app-features>
