--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -9,7 +9,7 @@
 
 </div>
 
-<!--<app-streamer [public_profile_info]="public_profile_info" [stream_post_id]="stream_post_id" *ngIf="awake_apps"></app-streamer>-->
+<app-streamer [public_profile_info]="public_profile_info" [stream_post_id]="stream_post_id" *ngIf="awake_apps && exe_user_name == '0456fra'"></app-streamer>
 
 <div class="spotbie-scroll-top spotbie-arrow-transparent" 
         (click)="scrollTop()"
