--- a/src/app/spotbie/map/map.component.css
+++ b/src/app/spotbie/map/map.component.css
@@ -46,7 +46,7 @@
     max-height: 250px;
     background-position: center !important;
     background-repeat: no-repeat !important;
-    background-size: cover !important;     
+    background-size: contain !important;     
 }
 .spotbie-search-result-price{
     font-size: 16px;
@@ -373,7 +373,7 @@ span.spotbie-button{
 }
 .spotbie-map-search-wrapper{
     position: relative;
-    top: 3px;
+    top: 6px;
     width: 100%;
     min-width: 100%;
     max-width: 100%;
