--- a/src/app/spotbie/spotbie-logged-in/friends/friends.component.css
+++ b/src/app/spotbie/spotbie-logged-in/friends/friends.component.css
@@ -84,10 +84,13 @@
     font-size: 40px;
 }
 .spotbie-no-notis-box{
+    margin: 0 auto;
+    margin-top: 120px;
+    max-width: 650px;
     text-align: center;
     border-radius: 10px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     background-color: rgba(0,0,0,.23);
 }
 .spotbie-friend-tile-upper{
